--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.93.1",
     "axios": "^1.6.7",
     "framer-motion": "^11.0.3",
     "html2canvas": "^1.4.1",
@@ -33,4 +34,3 @@
     "typescript": "5.3.3"
   }
 }
-
